<resources>
    <string name="app_name">Contacts</string>

    <!--  My profile  -->
    <string name="text_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="avatar">avatar</string>
    <string name="text_profession">Graphic designer</string>
    <string name="text_view_address">5295 Gaylord Walks Apk. 110</string>
    <string name="facebook_btn">facebook_btn</string>
    <string name="linkedin_btn">linkedin_btn</string>
    <string name="instagram_btn">instagram_btn</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">view my contacts</string>

    <!--  Sign Up  -->
    <string name="text_greetings">Let\'s get acquainted</string>
    <string name="text_fill_profile">Fill out the profile and go to the application!</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google">google</string>
    <string name="or">or</string>
    <string name="register">register</string>
    <string name="text_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="text_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="e_mail">E-mail</string>
    <string name="incorrect_email">Incorrect email format</string>
    <string name="incorrect_password">The password should have from 8 to 20 letters</string>

    <!--  Contacts  -->
    <string name="trash">trash</string>
    <string name="back_arrow">back</string>
    <string name="text_contacts">Contacts</string>
    <string name="btn_search">search</string>
    <string name="add_contacts">Add contacts</string>
    <string name="item_background">item background</string>
    <string name="contact_removed">contact has been removed</string>

    <!--  Edit profile  -->
    <string name="username">Username</string>
    <string name="career">Career</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">SAVE</string>

</resources>