<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_my_profile_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/profile_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/id_text_view_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_settings"
                android:textColor="@color/setting_text"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/id_btn_view_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="120dp"
                android:height="40dp"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/grey"
                app:strokeWidth="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/id_img_view_foto"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:layout_marginTop="36dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/avatar"
            android:scaleType="fitXY"
            android:src="@drawable/foto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_header" />

        <TextView
            android:id="@+id/id_text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_img_view_foto" />

        <TextView
            android:id="@+id/id_text_view_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_profession"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_text_view_name" />

        <TextView
            android:id="@+id/id_text_view_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/text_view_address"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_text_view_profession" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_my_profile_down"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_my_profile_up">

        <ImageView
            android:id="@+id/id_img_view_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/facebook_btn"
            android:foregroundGravity="center|center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/id_img_view_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/linkedin_btn"
            android:foregroundGravity="center|center_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/id_img_view_instagram"
            app:layout_constraintStart_toEndOf="@+id/id_img_view_facebook"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/linkedin" />

        <ImageView
            android:id="@+id/id_img_view_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/instagram_btn"
            android:foregroundGravity="center|center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/instagram" />

        <Button
            android:id="@+id/id_btn_edit"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:width="120dp"
            android:includeFontPadding="false"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/id_btn_contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/profile_background"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/id_btn_contacts"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:width="120dp"
            android:includeFontPadding="false"
            android:text="@string/view_my_contacts"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/orange"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>