<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.profile.MyProfileActivity">

    <View
        android:id="@+id/edit_profile_up"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:background="@color/profile_background"
        app:layout_constraintBottom_toBottomOf="@id/img_view_photo"
        app:layout_constraintBottom_toTopOf="@id/edit_profile_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/edit_profile_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_my_profile_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_up" />

    <ImageView
        android:id="@+id/edit_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin_horizontal"
        android:layout_marginTop="@dimen/medium1_margin_vertical"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin_vertical"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/headline_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/img_view_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_view_photo"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_marginVertical="24dp"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        android:src="@drawable/ava"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_edit_profile"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/icon_add_photo"
        android:clickable="true"
        android:contentDescription="@string/add_photo"
        app:layout_constraintStart_toEndOf="@+id/img_view_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_save_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_up">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/username" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Sergiy Poddubka" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/career" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Java Developer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="(264)-654-3452" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/address" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="5295 Gaylord Walks Apk. 110" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/date_of_birth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="12/05/1994" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_save_contacts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn"
        android:layout_marginStart="@dimen/large_margin_horizontal"
        android:layout_marginEnd="@dimen/large_margin_horizontal"
        android:layout_marginBottom="@dimen/medium1_margin_vertical"
        android:includeFontPadding="false"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/title_small"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_color_view_contacts"
        app:cornerRadius="@dimen/radius_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
