<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contacts_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyContactsActivity">

    <View
        android:id="@+id/view_up"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:background="@color/profile_background"
        app:layout_constraintBottom_toTopOf="@id/view_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_down"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_up" />


    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin_horizontal"
        android:layout_marginTop="@dimen/medium1_margin_vertical"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintEnd_toStartOf="@id/text_contacts"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin_vertical"
        android:text="@string/text_contacts"
        android:textColor="@color/white"
        android:textSize="@dimen/headline_small"
        app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintStart_toEndOf="@+id/arrow_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium1_margin_vertical"
        android:layout_marginEnd="@dimen/medium_margin_horizontal"
        android:contentDescription="@string/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_contacts"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/find" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium1_margin_vertical"
        android:layout_marginBottom="@dimen/medium3_margin_vertical"
        android:text="@string/add_contacts"
        android:textColor="@color/white"
        android:textSize="@dimen/title_medium"
        app:layout_constraintBottom_toBottomOf="@id/view_up"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingVertical="@dimen/small_padding_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_down"
        tools:listitem="@layout/contact_item" />

</androidx.constraintlayout.widget.ConstraintLayout>